# Fast-API-App

./: .env  Dockerfile  fly.toml  main.py  pyproject.toml
