[tool.poetry]
name = "twilio-deepgram-test"
version = "0.1.0"
description = "Live Twilio call streamed to Deepgram for transcription"
authors = ["Your Name <your@email.com>"]

[tool.poetry.dependencies]
python = "^3.10"
websockets = "^10.0"
deepgram-sdk = "2.12.0"
fastapi = "*"
uvicorn = "*"
twilio = "^8.0.0"
python-dotenv = "*"
