[tool.poetry]
name = "twilio-deepgram-test"
version = "0.1.0"
description = "Live Twilio call streamed to Deepgram for transcription with GPT and ElevenLabs integration"
authors = ["Your Name <your@email.com>"]

[tool.poetry.dependencies]
python = "^3.10"
websockets = "^12.0"
deepgram-sdk = "^4.0.0"
fastapi = "*"
uvicorn = "*"
twilio = "^8.0.0"
python-dotenv = "*"
openai = "*"
httpx = "^0.27.0"
pydub = "^0.25.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
