[tool.poetry]
name = "twilio-deepgram-test"
version = "0.1.0"
description = "Live Twilio call streamed to Deepgram for transcription with GPT and ElevenLabs integration"
authors = ["Your Name <your@email.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "*"
uvicorn = "*"
websockets = "^12.0"
twilio = "^8.0.0"
deepgram-sdk = "^4.0.0"
python-dotenv = "*"
openai = "*"
requests = "^2.31.0"           # ✅ For ElevenLabs API calls
httpx = "^0.27.0"              # Optional, used by OpenAI
pydub = "^0.25.1"              # Optional, if manipulating audio
aiofiles = "^23.2.1"           # ✅ Optional: helps serve static files (if needed)
python-multipart = "^0.0.20"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
